syntax = "proto3";

package com.taotao.cloud.goods.api.grpc;

option java_multiple_files = true;
option java_package = "com.taotao.cloud.goods.api.grpc";
option java_outer_classname = "GoodsServiceProto";
//option objc_class_prefix = "HLW";

service GoodsService {
  // Sends a message
  rpc countStoreGoodsNum (CountStoreGoodsNumRequest) returns (CountStoreGoodsNumResponse){}
}

message CountStoreGoodsNumRequest {
  string id = 1;
}

message CountStoreGoodsNumResponse {
  string id = 1;
  string serialNum = 2;
  string userNum = 3;
  int32  status = 4;
  int32  type = 5;
  string address = 6;
  string createtime = 7;
  string updatetime = 8;
}

